--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,16 +1,14 @@
-name: Pull Requst
+name: Pull Request
 
 on: [pull_request]
 
 jobs:
-  lint:
-    name: Lint Formatting
-    runs-on: ubuntu-latest
+  Lint:
+    runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Lint Formatting
-        run: swift format lint --recursive --strict .
-
+      - uses: actions/checkout@v3
+      - name: SwiftFormat
+        run: swiftformat --lint --strict . --reporter github-actions-log
   test-ubuntu-latest:
     name: Test Swift ${{ matrix.swift }} Ubuntu Latest
     strategy:
@@ -22,3 +20,4 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run Tests
         run: swift test -Xswiftc -warnings-as-errors -Xcc -Werror
+
